Minor to update integration test filter

--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -87,7 +87,7 @@ jobs:
       - name: Wait for cads_ingester to be ready
         run: ./working-dir/wait-for-docker-logs.sh cads_ingester "Now listening on" 60
       - name: Run integration tests
-        run: dotnet test ./working-dir/Cads.Ingester.sln --filter "Category=Integration"
+        run: dotnet test ./working-dir/Cads.Ingester.sln --filter Dependence=localstack
 
     ## SonarCloud
     ## Uncomment to unable SonarCloud scan
